-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11.0.1, 17, 18
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8297621 | 17.0.6 | Aleksey Shipilev | P4 | Resolved | Fixed | b05 |
With the introduction of constant dynamics, the 32-bit arm softfp port started to load CONSTANT_double values from the CP using the condy helper methods. This is not required and should be avoided, since those helper methods might not be designed for loading primitive types.
https://git.openjdk.java.net/jdk/blob/07e90524576f159fc16523430f1db62327c89a3b/src/hotspot/cpu/arm/templateTable_arm.cpp#L474
https://git.openjdk.java.net/jdk/blob/07e90524576f159fc16523430f1db62327c89a3b/src/hotspot/cpu/arm/templateTable_arm.cpp#L474
- backported by
-
JDK-8297621 ARM32-softfp: Do not load CONSTANT_double using the condy helper methods in the interpreter
-
- Resolved
-
- duplicates
-
JDK-8230797 ARM32-softfp: assertion in InterpreterRuntime::resolve_ldc
-
- Closed
-
- relates to
-
JDK-8201602 ARM32 - Minimal Dynamic Constant support
-
- Resolved
-
- links to
-
Commit
openjdk/jdk17u-dev/8ed9f83e
-
Commit
openjdk/jdk/a066c7be
-
Review
openjdk/jdk17u-dev/927
-
Review
openjdk/jdk/4767
(2 links to)