8270086: ARM32-softfp: Do not load CONSTANT_double using the condy helper methods in the interpreter